@@ -7,6 +7,7 @@ Enhancements:
   * <head>, <html> and <body> added to the HTML5lib whitelist, and
     scrubbing is now symmetrical across xml/html documents/fragments.
   * Implemented Node#scrub! for scrubbing subtrees.
+  * Implemented NodeSet#scrub! for scrubbing subtrees.
 
 == 0.4.1
 
